pre-presentation commit

--- a/Part5_CMVvsUnpopO_Modeling.ipynb
+++ b/Part5_CMVvsUnpopO_Modeling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "567ecd56",
+   "id": "e7a4a685",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "de1e7785",
+   "id": "1ca5fce2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "093b6e22",
+   "id": "73d8f538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fbb3eca",
+   "id": "4c49ffe3",
    "metadata": {},
    "source": [
     "***Model creation and optimization***"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b59d32c0",
+   "id": "2c8a4895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc246d1e",
+   "id": "2ca9c0de",
    "metadata": {},
    "source": [
     "- Dummy"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "542454d5",
+   "id": "36d1ac21",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc7bcd59",
+   "id": "40d6811a",
    "metadata": {},
    "source": [
     "- XGBoost"
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e30e0812",
+   "id": "7673a7f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c179cd0b",
+   "id": "0c8d1693",
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8991bf71",
+   "id": "a9b2ce40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b47cdb00",
+   "id": "95bfeef9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c9f555b1",
+   "id": "e650f881",
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1861,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c8f2e3bc",
+   "id": "842f6f8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1871,7 +1871,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "39f3ccfd",
+   "id": "4a29b2a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d886c7",
+   "id": "7a629e6c",
    "metadata": {},
    "source": [
     "- Logistic Regression"
@@ -1888,21 +1888,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "50e619e2",
+   "execution_count": 41,
+   "id": "3a0391c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "logreg_pipe = Pipeline([\n",
-    "    ('logreg', LogisticRegression(random_state = 42, solver = 'saga'))\n",
+    "    ('logreg', LogisticRegression(random_state = 42, solver = 'liblinear', penalty = 'l1'))\n",
     "])\n",
     "\n",
     "logreg_params = {\n",
-    "    'logreg__penalty': Categorical(['l1', 'l2', 'elasticnet']),\n",
     "    'logreg__tol': Real(0, .1, prior='uniform'),\n",
     "    'logreg__C': Real(0.0001, 100, prior='log-uniform'),\n",
     "    'logreg__class_weight': Categorical(['balanced', None]),\n",
-    "    'logreg__max_iter': Integer(500, 1000),\n",
+    "    'logreg__max_iter': Integer(0, 1000),\n",
     "    'logreg__l1_ratio': Real(0, 1, prior='uniform')\n",
     "}\n",
     "\n",
@@ -1929,28 +1928,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "c71685ab",
+   "execution_count": 42,
+   "id": "bc6645f3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Avanyali\\AppData\\Roaming\\Python\\Python37\\site-packages\\sklearn\\linear_model\\_logistic.py:1317: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "  \"(penalty={})\".format(self.penalty))\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "BayesSearchCV(cv=5,\n",
        "              estimator=Pipeline(steps=[('logreg',\n",
-       "                                         LogisticRegression(random_state=42,\n",
-       "                                                            solver='saga'))]),\n",
+       "                                         LogisticRegression(penalty='l1',\n",
+       "                                                            random_state=42,\n",
+       "                                                            solver='liblinear'))]),\n",
        "              n_jobs=8, optimizer_kwargs={'base_estimator': 'RF'},\n",
        "              random_state=42, scoring='f1',\n",
        "              search_spaces={'logreg__C': Real(low=0.0001, high=100, prior='log-uniform', transform='identity'),\n",
        "                             'logreg__class_weight': Categorical(categories=('balanced', None), prior=None),\n",
        "                             'logreg__l1_ratio': Real(low=0, high=1, prior='uniform', transform='identity'),\n",
-       "                             'logreg__max_iter': Integer(low=500, high=1000, prior='uniform', transform='identity'),\n",
-       "                             'logreg__penalty': Categorical(categories=('l1', 'l2', 'elasticnet'), prior=None),\n",
+       "                             'logreg__max_iter': Integer(low=0, high=1000, prior='uniform', transform='identity'),\n",
        "                             'logreg__tol': Real(low=0, high=0.1, prior='uniform', transform='identity')})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1961,8 +1968,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "fa3d21b4",
+   "execution_count": 43,
+   "id": "086f5747",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1971,8 +1978,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6c45a786",
+   "execution_count": 44,
+   "id": "1cba19bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,18 +1988,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "e385c412",
+   "execution_count": 45,
+   "id": "f86540b2",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Avanyali\\AppData\\Roaming\\Python\\Python37\\site-packages\\sklearn\\linear_model\\_logistic.py:1317: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l2)\n",
-      "  \"(penalty={})\".format(self.penalty))\n",
-      "C:\\Users\\Avanyali\\AppData\\Roaming\\Python\\Python37\\site-packages\\sklearn\\linear_model\\_sag.py:330: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  \"the coef_ did not converge\", ConvergenceWarning)\n"
+      "C:\\Users\\Avanyali\\AppData\\Roaming\\Python\\Python37\\site-packages\\sklearn\\linear_model\\_logistic.py:1317: UserWarning: l1_ratio parameter is only used when penalty is 'elasticnet'. Got (penalty=l1)\n",
+      "  \"(penalty={})\".format(self.penalty))\n"
      ]
     },
     {
@@ -2000,19 +2005,19 @@
       "text/plain": [
        "BayesSearchCV(cv=5,\n",
        "              estimator=Pipeline(steps=[('logreg',\n",
-       "                                         LogisticRegression(random_state=42,\n",
-       "                                                            solver='saga'))]),\n",
+       "                                         LogisticRegression(penalty='l1',\n",
+       "                                                            random_state=42,\n",
+       "                                                            solver='liblinear'))]),\n",
        "              n_jobs=8, optimizer_kwargs={'base_estimator': 'RF'},\n",
        "              random_state=42, scoring='roc_auc',\n",
        "              search_spaces={'logreg__C': Real(low=0.0001, high=100, prior='log-uniform', transform='identity'),\n",
        "                             'logreg__class_weight': Categorical(categories=('balanced', None), prior=None),\n",
        "                             'logreg__l1_ratio': Real(low=0, high=1, prior='uniform', transform='identity'),\n",
-       "                             'logreg__max_iter': Integer(low=500, high=1000, prior='uniform', transform='identity'),\n",
-       "                             'logreg__penalty': Categorical(categories=('l1', 'l2', 'elasticnet'), prior=None),\n",
+       "                             'logreg__max_iter': Integer(low=0, high=1000, prior='uniform', transform='identity'),\n",
        "                             'logreg__tol': Real(low=0, high=0.1, prior='uniform', transform='identity')})"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2023,8 +2028,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "65845fbf",
+   "execution_count": 46,
+   "id": "885bd0cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,8 +2038,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "fff0e89f",
+   "execution_count": 47,
+   "id": "c0d4f0b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2043,7 +2048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "426774dd",
+   "id": "56b77613",
    "metadata": {},
    "source": [
     "- Decision Tree"
@@ -2051,8 +2056,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "c6b89d35",
+   "execution_count": 48,
+   "id": "17195bbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2094,8 +2099,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "2039740e",
+   "execution_count": 49,
+   "id": "b5254dc1",
    "metadata": {},
    "outputs": [
     {
@@ -2116,7 +2121,7 @@
        "                             'dtree__splitter': Categorical(categories=('best', 'random'), prior=None)})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2127,8 +2132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "7abfb6af",
+   "execution_count": 50,
+   "id": "a49dbe2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,8 +2142,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "6acc1b9f",
+   "execution_count": 51,
+   "id": "7c2ce4ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,8 +2152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "b65b9d00",
+   "execution_count": 52,
+   "id": "84fd7081",
    "metadata": {},
    "outputs": [
     {
@@ -2169,7 +2174,7 @@
        "                             'dtree__splitter': Categorical(categories=('best', 'random'), prior=None)})"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2180,8 +2185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "1cce5151",
+   "execution_count": 53,
+   "id": "49049e3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2190,8 +2195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "252fe410",
+   "execution_count": 54,
+   "id": "6cebe5b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,7 +2205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24692072",
+   "id": "667558d9",
    "metadata": {},
    "source": [
     "- Random Forest"
@@ -2209,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "bd0e0f4d",
+   "id": "713bb65f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2253,7 +2258,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0f0f748b",
+   "id": "739206c9",
    "metadata": {},
    "outputs": [
     {
@@ -2286,7 +2291,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f2f7a4fc",
+   "id": "8c8c3da7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2296,7 +2301,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b0de9d80",
+   "id": "20e2c19d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2306,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8860e6a4",
+   "id": "ca62a8de",
    "metadata": {},
    "outputs": [
     {
@@ -2339,7 +2344,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b2c27742",
+   "id": "489ef188",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2349,7 +2354,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "43f876c8",
+   "id": "10c76054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2358,7 +2363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaf0ca24",
+   "id": "caecb57f",
    "metadata": {},
    "source": [
     "- Extra Trees"
@@ -2367,7 +2372,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1be16b86",
+   "id": "88c18efd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,7 +2416,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "612880cb",
+   "id": "01eec8d3",
    "metadata": {},
    "outputs": [
     {
@@ -2444,7 +2449,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "6f25626e",
+   "id": "3486409c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2454,7 +2459,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "bbeb638b",
+   "id": "c2ab21d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2464,7 +2469,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "31409606",
+   "id": "2ba8be3b",
    "metadata": {},
    "outputs": [
     {
@@ -2497,7 +2502,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "b9dd7019",
+   "id": "d38680a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2507,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "6ca235cf",
+   "id": "df87a2d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2516,7 +2521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53e3acb5",
+   "id": "8a035810",
    "metadata": {},
    "source": [
     "- To step 6 ->"
