--- a/Part4_CMVvsUnpopO_DataExploration.ipynb
+++ b/Part4_CMVvsUnpopO_DataExploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c11151db",
+   "id": "12a1263c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6b94473c",
+   "id": "c53f978a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a25c9fb0",
+   "id": "89899656",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bde142af",
+   "id": "9f87df21",
    "metadata": {},
    "source": [
     "***Exploratory Data Analysis***"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7876af2a",
+   "id": "bc407fa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6fddd98b",
+   "id": "fa344528",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "13aa71dd",
+   "id": "b193e11c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "840edcd5",
+   "id": "c0c456a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f7e27d1d",
+   "id": "1aea82df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a629f68c",
+   "id": "876e5aba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f690dad4",
+   "id": "e9111ce5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c548162",
+   "id": "9206b257",
    "metadata": {},
    "source": [
     "- Additional cleaning after engineering."
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6a671a04",
+   "id": "0cc2e874",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2a016f0c",
+   "id": "38eda161",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "944509cc",
+   "id": "8b440e11",
    "metadata": {},
    "source": [
     "- Check for artifacts with oddly high means."
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "379cdae8",
+   "id": "bc0ea8fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "721d2219",
+   "id": "fe7eea3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84f8e7f1",
+   "id": "43782dec",
    "metadata": {},
    "source": [
     "- Nothing out of the ordinary here."
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3bea6c9f",
+   "id": "cc8843f5",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b26dbfac",
+   "id": "d72fb3bb",
    "metadata": {},
    "source": [
     "- Drop additional stopwords that were not covered by CountVectorizer."
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6d1e9c3a",
+   "id": "960de947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5a49fa39",
+   "id": "a8c2260f",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "37130148",
+   "id": "9f56bf37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1b8a9fb",
+   "id": "eba2ec8e",
    "metadata": {},
    "source": [
     "- Most frequently used words, least frequently used words."
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "765c08ef",
+   "id": "a3ef6da7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "27ea262d",
+   "id": "bf439c0a",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b10efb2c",
+   "id": "e097698b",
    "metadata": {},
    "source": [
     "- Many posts appear to talk about (perhaps unsurprisingly) opinions, given the frequency of people, like, don't, say, feel, know, and think."
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8eff498c",
+   "id": "b325aaf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "76eee21f",
+   "id": "5cd19a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "94091d88",
+   "id": "adad5ae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c165e3ee",
+   "id": "c00280d1",
    "metadata": {},
    "source": [
     "- Outlier and distributions check."
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c5118aa2",
+   "id": "adc69c89",
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7b15d9d",
+   "id": "c97aed10",
    "metadata": {},
    "source": [
     "- No need to remove these outliers, as post_score and num_comments both just indicate additional text data that will not be used in this analysis.\n",
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "601ec36d",
+   "id": "8921d265",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b314a7b4",
+   "id": "62629ec5",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "93e1078c",
+   "id": "2175e519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "afeb5739",
+   "id": "a4c5b683",
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89a14d21",
+   "id": "afa09874",
    "metadata": {},
    "source": [
     "- Unpopular opinion is slightly more negative in terms of language on average, but shows a higher spread across all sentiments (std)."
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aedc6de",
+   "id": "d472df95",
    "metadata": {},
    "source": [
     "- Create a ratio of all word counts between the two subreddits."
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f7f84c8b",
+   "id": "248de045",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "719715f3",
+   "id": "96a6e2bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "496d5934",
+   "id": "a2088dc5",
    "metadata": {},
    "outputs": [
     {
@@ -832,22 +832,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9b7f1ce",
+   "id": "7e188725",
    "metadata": {},
    "source": [
     "- These charts show interesting differences between the two subreddits:\n",
-    "   - Negatively opinionated words such as 'overrated', 'annoying', 'boring', 'trash', 'shit, 'suck, and 'shitty' all appear at least three times more often in Unpopular opinion that in change my view. \n",
-    "   - 'Song', 'meme', and 'anime' appear more frequently in Unpopular opinion than in change my view. Taken with the above point, it is likely that posts in Unpopular opinion are frequently about the quality of popular works of media.\n",
-    "   - Reddit specific language such as 'wiki', 'report', 'downvotes', 'submitting, and 'moderator' appear more frequently in change my view.\n",
-    "   - Hello appears much more frequently in change my view, similar to a formal email or other message.\n",
-    "   - Similarly, polite language such as 'concern', 'remind', and 'firstly' appear more over 20 times more frequently in change my view than in Unpopular opinion.\n",
+    "   - Negatively opinionated words such as 'overrated', 'annoying', 'boring', 'fucking', and 'suck' all appear at least three times more often in Unpopular opinion that in change my view. \n",
+    "   - 'Song', 'meme', and 'movie' appear more frequently in Unpopular opinion than in change my view. Taken with the above point, it is likely that posts in Unpopular opinion are frequently about the quality of popular works of media.\n",
+    "   - '_____' appears as an artifact of the data I don't quite know what to do with. Sometimes it appears to be a blank, sometimes it appears to be a moderator removed word.\n",
+    "   - Change my View appears to be focused on big picture geopolitical, economic, or societal issues, attested to by 'election', 'abortion', 'china', 'economic', 'morally', 'israel', and 'biden'.\n",
     "   - Biden appears much more frequently in change my view than in unpopular opinion, though surprisingly 'Trump' does not appear on this list. This data is scraped over a long enough period that I would have expected it."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "168fd5ca",
+   "id": "6c72970c",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +866,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1a5f461",
+   "id": "0adcc501",
    "metadata": {},
    "source": [
     "- Trump does appear more often in change my view than in unpopular opinion. Politics does as well, and the three together seem to indicate that political opinions are voice more often in change my view than in unpopular opinion as a whole. I am curious why Biden appears 90 times more often in cmv and Trump only appears 3 times more often."
@@ -876,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8b1905bc",
+   "id": "4dc2afd6",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6381efa9",
+   "id": "085002b5",
    "metadata": {},
    "source": [
     "- It appears that Biden's appearance so often in cmv compared to unpop may be due to low sample size - one tenth of the appearances that Trump makes."
@@ -905,7 +904,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "4ee2bc00",
+   "id": "6df5b8ef",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "46cfa7ef",
+   "id": "cb06421e",
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "df00adb4",
+   "id": "2c400349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28687345",
+   "id": "fd11bfe6",
    "metadata": {},
    "source": [
     "- Save edited csv."
@@ -967,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ec9b8c92",
+   "id": "6f1195fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13d8f82b",
+   "id": "0a8e02d5",
    "metadata": {},
    "source": [
     "- On to part 5 ->"
