--- a/Part1_CMVvsUnpopO_WebScraping.ipynb
+++ b/Part1_CMVvsUnpopO_WebScraping.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a7e36be1",
+   "id": "b7ed5d8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a753d13f",
+   "id": "fe0c425a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da1ac176",
+   "id": "1b2ea7bd",
+   "metadata": {},
+   "source": [
+    "***Problem Statement***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1e73947",
+   "metadata": {},
+   "source": [
+    "- My (hypothetical) company is an advertising firm. Management has indicated that they would like to see how feasible it would be to insert astroturfers into opinion forums to generate positive public sentiment for our clientele’s products and negative public sentiment for opposing products.\n",
+    "- We have selected two popular opinion forums on the website Reddit.com: “Change my View” and “Unpopular Opinion.” Our goal is to analyze the words they use and what they talk about to form our conclusions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6bd594f",
    "metadata": {},
    "source": [
     "***Process used for data collection***"
@@ -35,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d774d76c",
+   "id": "f07875da",
    "metadata": {},
    "source": [
     "- Never run this again, unless trying to duplicate this work. Full list of queries and the date at which they were made can be found in AllQueries.txt, accompanying this file."
@@ -43,7 +60,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "f8d636ee",
+   "id": "8f4f0fec",
    "metadata": {
     "jupyter": {
      "outputs_hidden": true
@@ -91,7 +108,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "acad285f",
+   "id": "3bb3bc4e",
    "metadata": {},
    "source": [
     "change_frame = pd.concat(posts['changemyview'])\n",
@@ -100,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdf54b58",
+   "id": "803fcb96",
    "metadata": {},
    "source": [
     "- Save scraped data."
@@ -108,7 +125,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "f266f82d",
+   "id": "da9646ce",
    "metadata": {},
    "source": [
     "change_frame.to_csv('data/raw_changemyview_initial_scrape')"
@@ -116,7 +133,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "845c7ff1",
+   "id": "9531faa9",
    "metadata": {},
    "source": [
     "opinion_frame.to_csv('data/raw_unpopularopinion_initial_scrape')"
@@ -124,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d78bfc7f",
+   "id": "cf553f48",
    "metadata": {},
    "source": [
     "- On to part 2 ->"
