--- a/Part3_CMVvsUnpopO_DataEngineering.ipynb
+++ b/Part3_CMVvsUnpopO_DataEngineering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f573c0fa",
+   "id": "e8d7c17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "88e41097",
+   "id": "2d4fa4ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fdd9a119",
+   "id": "73923c0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "604dcf26",
+   "id": "543dcdb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78fccd35",
+   "id": "69e72fb1",
    "metadata": {},
    "source": [
     "***Data Engineering***"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0e19d151",
+   "id": "597279f1",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "715dca9f",
+   "id": "37d13c9e",
    "metadata": {},
    "source": [
     "- Set changemyview to be the positive class."
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "371dff05",
+   "id": "898ce55b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cfb4582",
+   "id": "1a9137b6",
    "metadata": {},
    "source": [
     "- Scrub URLs and CMVs."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9653cc82",
+   "id": "4210c6c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "51ba577e",
+   "id": "fed0873e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b1e647d",
+   "id": "1a9f754d",
    "metadata": {},
    "source": [
     "- Remove inserted moderator comments. Many change my view posts have \"_____ gt hello user of cmv this is a footnote...[etc.]\" or similar appended to the end of their selftext. "
@@ -158,8 +158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "1edef833",
+   "execution_count": 9,
+   "id": "6c227b97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "396aea9d",
+   "execution_count": 10,
+   "id": "fb4b475d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5354cb06",
+   "id": "d441cd4f",
    "metadata": {},
    "source": [
     "- Lemmatize text fields."
@@ -187,8 +187,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "4d3d567c",
+   "execution_count": 11,
+   "id": "fcedfa60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "280498b9",
+   "execution_count": 12,
+   "id": "c46af874",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2da4bb7d",
+   "execution_count": 13,
+   "id": "583124b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,8 +219,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a819f6c3",
+   "execution_count": 14,
+   "id": "063b8cda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a7ca2b7",
+   "id": "cb01cc0a",
    "metadata": {},
    "source": [
     "- Add sentiment analysis columns."
@@ -238,8 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7ef4ce67",
+   "execution_count": 15,
+   "id": "2f5bec60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "bf918b41",
+   "execution_count": 16,
+   "id": "75b2f271",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,8 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "436eb103",
+   "execution_count": 17,
+   "id": "bc8e2508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "df670ac6",
+   "execution_count": 18,
+   "id": "eb068e3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f97df3a",
+   "id": "3e79d736",
    "metadata": {},
    "source": [
     "- Change column names so that there won't be a collision with vectorized columns."
@@ -292,8 +292,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "23e13b44",
+   "execution_count": 19,
+   "id": "bfe254cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c94c35b",
+   "id": "dab13f24",
    "metadata": {},
    "source": [
     "- Add training column for fitting purposes."
@@ -310,8 +310,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "14eb6540",
+   "execution_count": 20,
+   "id": "54d6f181",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,8 +325,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "f6824283",
+   "execution_count": 21,
+   "id": "3d19f6d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,16 +336,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6642cae",
+   "id": "cc499fe8",
    "metadata": {},
    "source": [
-    "- Identify best parameters for vectorizer. Code credit to lesson 'advanced hyperparameter search'"
+    "- Identify best parameters for vectorizer. Code credit to lesson 'advanced hyperparameter search'\n",
+    "- Multinomial Naive Bayes is used as a fast, easily optimized model that works well on natural language data to pipe our vectorizer through."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "2f2fb22f",
+   "execution_count": 22,
+   "id": "483adbeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,8 +374,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "3ecf901c",
+   "execution_count": 23,
+   "id": "ee38b733",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,8 +385,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "4e42bd26",
+   "execution_count": 24,
+   "id": "d34a212a",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +403,7 @@
        "                             'mnb__alpha': Real(low=0.001, high=100, prior='log-uniform', transform='identity')})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,18 +414,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "20033a03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "preds = cvec_bs.predict(test_text_post)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "4a86a428",
+   "execution_count": 25,
+   "id": "8717187e",
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +427,7 @@
        "             ('mnb__alpha', 0.001)])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,9 +437,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c0f126c6",
+   "metadata": {},
+   "source": [
+    "- Train performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "42a5358e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = cvec_bs.predict(train_text_post)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5ee90752",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tn, fp, fn, tp = confusion_matrix(y_train, preds).ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f0393079",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.7966140471288035,\n",
+       " 'sensitivity': 0.8017286537454165,\n",
+       " 'specificity': 0.7926482534524777,\n",
+       " 'f1': 0.7749367088607595}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics(tn, fp, fn, tp, metric = 'all')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39076fca",
+   "metadata": {},
+   "source": [
+    "- Test performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fa3e0ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = cvec_bs.predict(test_text_post)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "af390ce4",
+   "id": "5675aadd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "06ef851a",
+   "id": "467c23fb",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81dfaca6",
+   "id": "b3d56cf9",
    "metadata": {},
    "source": [
     "- Vectorize words and add to dataframe."
@@ -490,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "06888e78",
+   "id": "dc9aa767",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "5180cb4f",
+   "id": "927819b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "cd858d9e",
+   "id": "360e592e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6cfe08c5",
+   "id": "d6febb37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "1b9ea011",
+   "id": "caeed565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8eff52a0",
+   "id": "23b448e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3982e681",
+   "id": "95d593f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "646cc2c9",
+   "id": "846ccaaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "573feb14",
+   "id": "b5436135",
    "metadata": {},
    "source": [
     "- Save engineered file."
@@ -584,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "629155a7",
+   "id": "8f4d1586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea54360",
+   "id": "d5a2f760",
    "metadata": {},
    "source": [
     "- On to part 4 ->"
